<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I Am HipHop</string>
    <string name="back">Back</string>
    <string name="menu">Main Menu</string>
    <string name="answers">View Answers</string>
    <string name="logo">logo</string>
    <string name="update">Update</string>
    <string name="difficulty">Difficulty</string>
    <string name="simple">Simple</string>
    <string name="lives">Lives</string>
    <string name="previous">Previous Scores</string>
    <string name="advanced">Advanced</string>
    <string name="play">New Game</string>
    <string name="challenge">Start Challenge</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="level1">Level 1</string>
    <string name="score">00 secs</string>
    <string name="start">Start</string>
    <string name="level2">Level 2</string>
    <string name="locked">locked</string>
    <string name="level3">Level 3</string>
    <string name="replay">Try Again</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="level6">Level 6</string>
    <string name="share">Share</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="achievements">Achievements</string>
    <string name="submit">Submit Score</string>
    <string name="btnRate">Rate Me</string>
    <string name="author">Author</string>
    <string name="version">App Version</string>
    <string name="name">Peter Mutisya</string>
    <string name="email">pekuria25@gmail.com</string>
    <string name="tweet">\@kuche2</string>
    <string name="contact1">Email Me</string>
    <string name="contact2">Tweet Me</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_why">Sign in with Google to share your scores with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="title_activity_ad">Ad</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Google Mobile Ads Interstitial Sample</string>
    <string name="load_interstitial">Load Interstitial</string>
    <string name="interstitial_not_ready">Interstitial Not Ready</string>
    <string name="ad_unit_id">ca-app-pub-6751988760811765/2476922334</string>
    <string name="amazon_key">518481f6b21f476d92635740805a6ae9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="credit">Credits</string>

</resources>